CORRECT BLOCKQUOTE PADDING ON MOBILE

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,6 +42,7 @@ header h2 {
 	    margin-bottom: 15px;
 	}
 	blockquote {
+		padding: 0 0 0 15px;
 	    margin-inline-start: 15px;
 	    margin-inline-end: 15px;
 	}
@@ -61,6 +62,7 @@ header h2 {
 		margin-bottom: 14px;
 	}
 	blockquote {
+		padding: 0 0 0 14px;
 	    margin-inline-start: 14px;
 	    margin-inline-end: 14px;
 	}
@@ -80,6 +82,7 @@ header h2 {
 		margin-bottom: 12px;
 	}
 	blockquote {
+		padding: 0 0 0 12px;
 	    margin-inline-start: 12px;
 	    margin-inline-end: 12px;
 	}
@@ -99,6 +102,7 @@ header h2 {
 		margin-bottom: 10px;
 	}
 	blockquote {
+		padding: 0 0 0 10px;
 	    margin-inline-start: 10px;
 	    margin-inline-end: 10px;
 	}
